[project]
name = "icgl-17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "langchain-core>=0.3.64",
    "litellm>=1.72.2",
    "matplotlib>=3.10.3",
    "openai>=1.84.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]
